# tauri-plugin-toast

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
android/src/main/java/: ExamplePlugin.kt
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.vue
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: show_toast.toml
permissions/schemas/: schema.json
src/: commands.rs  lib.rs  mobile.rs  models.rs
