[package]
name = "tauri-plugin-toast"
version = "0.0.2"
authors = [ "bling-yshs" ]
description = "A Tauri plugin for showing toast notifications on Android"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-toast"
license = "MIT"

[dependencies]
tauri = { version = "2.8.4" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }